[gd_scene load_steps=9 format=3 uid="uid://bqnl8f4bflhg3"]

[ext_resource type="Texture2D" uid="uid://cjhieew4csu2s" path="res://Assets/Menu/imagen_menuprincipal.jpg" id="1_g8k5a"]
[ext_resource type="Script" path="res://Scripts/Menu/menuPrincipal.gd" id="1_ndqvk"]
[ext_resource type="Texture2D" uid="uid://cxxbnr1tuaixq" path="res://Assets/Menu/Tienda.png" id="4_eeb4n"]
[ext_resource type="Texture2D" uid="uid://dis1oame4nh7e" path="res://Assets/Menu/engranaje.png" id="5_16uas"]
[ext_resource type="Texture2D" uid="uid://b617h6dxqk02i" path="res://Assets/Menu/Jugar.png" id="6_s2ufy"]
[ext_resource type="Texture2D" uid="uid://bj2efo6ydxc67" path="res://Assets/Menu/Inventario.png" id="7_bfsfw"]
[ext_resource type="FontFile" uid="uid://cpllvdqkfw1x7" path="res://fonts/MagicSchoolOne.ttf" id="7_vph7g"]

[sub_resource type="LabelSettings" id="LabelSettings_14hwo"]
font = ExtResource("7_vph7g")
font_size = 80
font_color = Color(0, 0, 0, 1)

[node name="MenuPrincipal" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ndqvk")

[node name="Fondo" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_g8k5a")
expand_mode = 1

[node name="Nombre" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.404
anchor_top = 0.14
anchor_right = 0.804
anchor_bottom = 0.324
offset_left = -0.40802
offset_top = 0.279999
offset_right = -0.208008
offset_bottom = 0.0480042
text = "Castle Conquest TD"
label_settings = SubResource("LabelSettings_14hwo")

[node name="BotonTienda" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 561.0
offset_top = 331.0
offset_right = 829.0
offset_bottom = 447.0
texture_normal = ExtResource("4_eeb4n")

[node name="BotonConfiguracion" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 1071.0
offset_top = 28.0
offset_right = 1454.0
offset_bottom = 411.0
scale = Vector2(0.0996097, 0.0996094)
texture_normal = ExtResource("5_16uas")

[node name="BotonJugar" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 561.0
offset_top = 214.0
offset_right = 829.0
offset_bottom = 330.0
texture_normal = ExtResource("6_s2ufy")

[node name="BotonInventario" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 561.0
offset_top = 448.0
offset_right = 829.0
offset_bottom = 564.0
texture_normal = ExtResource("7_bfsfw")

[connection signal="pressed" from="BotonTienda" to="." method="_on_boton_tienda_pressed"]
[connection signal="pressed" from="BotonConfiguracion" to="." method="_on_boton_configuracion_pressed"]
[connection signal="pressed" from="BotonJugar" to="." method="_on_boton_jugar_pressed"]
[connection signal="pressed" from="BotonInventario" to="." method="_on_boton_inventario_pressed"]
